Refactor to remove PHP dependency.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<?php
-$API_KEY = 'AIzaSyAEk2zBHs073Jmo9vwGki_2damJgBPoiHY';
-/**
- * Created by PhpStorm.
- * User: kath.young
- * Date: 12/20/17
- * Time: 12:03 PM
- */
-?><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
@@ -32,7 +24,7 @@ $API_KEY = 'AIzaSyAEk2zBHs073Jmo9vwGki_2damJgBPoiHY';
 <body>
 <div id="map"></div>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=<?php echo $API_KEY;?>&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEk2zBHs073Jmo9vwGki_2damJgBPoiHY&callback=initMap">
 </script>
 <div style="position: absolute;top: 0px; left: 0px;">
     <input type="text" id="debug">
