--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEk2zBHs073Jmo9vwGki_2damJgBPoiHY&callback=initMap">
 </script>
-<div style="position: absolute;top: 0px; left: 0px;">
+<div style="position: absolute;top: 0px; left: 0px; width: 300px; height: 100%;">
     <input type="text" id="debug">
 </div>
 </body>
